--- a/style/style.css
+++ b/style/style.css
@@ -70,11 +70,12 @@ div {
 }
 
 p{
-	font-size : 1.25em;
+	font-size : 20px;
 	font-family : DemiHaut;
 }
 
 li{
+	font-size : 20px;
 	font-family : DemiHaut;
 }
 
